--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,6 +5,8 @@
     <title>Test</title>
     <link rel="stylesheet" type="text/css" href="/css/style.css">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>
+    <script type='text/javascript' src='/script/config.js'></script>
+    <script type='text/javascript' src='/script/script.js'></script>
   </head>
   <body>
     <div class="container">
